# ParaPano

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Milestone.md  Proposal.md  README.md  Util.cpp  Util.h  bitarray.cpp  bitarray.h  brief.cpp  brief.h  cudaFilter.cu  cudaFilter.h  cudaMatcher.cu  cudaMatcher.h  filter.cpp  filter.h  gaussian.cpp  gaussian.h  keyPointDetector.cpp  keyPointDetector.h  main.cpp  stitcher.cpp  stitcher.h  timingResults.txt
data/: testPattern.txt
